tests/snapshots/sizes__tap_transactions_60x16.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────┐
│ ┌ JDBC tap — 8 queries · 0 heartbeats · … ────────────┐  │
│ │  state        stmts    fps        span     db-time  │  │
│ │  open             6      1     125.0ms       2.7ms  │  │
└─│  open             1      1         0µs       1.8ms  │──┘
┌ │  open             1      1         0µs       310µs  │──┐
│i│                                                     │  │
│1│                                                     │  │
│2│                                                     │  │
│3│                                                     │  │
│4│                                                     │  │
│5└─────────────────────────────────────────────────────┘  │
│6   katherine@example.com  pro   2026-03-21 16:40:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · F1 +5 more
