tests/snapshots/sizes__tap_transactions_80x24.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                                 ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  ┌ JDBC tap — 8 queries · 0 heartbeats · view: transactions · … ─────────┐   │
│  │  state        stmts    fps        span     db-time  pool          txn │   │
│  │  open             6      1     125.0ms       2.7ms  primary       c… ·│   │
│  │  open             1      1         0µs       1.8ms  primary       (… ·│   │
└──│  open             1      1         0µs       310µs  primary       (… ·│───┘
┌ r│                                                                       │───┐
│id│                                                                       │   │
│1 │                                                                       │   │
│2 │                                                                       │   │
│3 │                                                                       │   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · F1 +4 more
